its removed static eot

--- a/config.yml
+++ b/config.yml
@@ -14,5 +14,5 @@ CUSTOM_FOOTER_LEGAL_LINKS:
     - title: "Terms of service"
       url: "/tos"
     - title: "Indigo theme for Open edX"
-      url: "https://github.com/overhangio/indigo
-      "
+      url: "https://github.com/vicentesuc/custom"
+
